@startuml
title <b>beacons_sm
[*] --> Not_Init
state Not_Init
state Init
state Started {
state Beacon_Wait_Time

state Beacon_Transmission


}
state Stopped

Not_Init --> Init: <b>init</b> \n
Init --> Started: <b>start</b> \n
Init -[dotted,#blue]-> Init: <b>__periodic</b> \n/ reload_config
state Started {
[*] --> Beacon_Wait_Time
Started --> Stopped: <b>stop</b> [can_stop_operation]\n
Beacon_Wait_Time --> Beacon_Transmission: <b>__periodic</b> [is_beacon_time_expired]\n/ start_beacon_burst
Beacon_Transmission --> Beacon_Wait_Time: <b>__periodic</b> [all_beacons_transmitted]\n/ reset_send_state
Beacon_Transmission --> Beacon_Wait_Time: <b>__periodic</b> [is_sink_timeout_expired]\n/ log_sink_timeout_error
Beacon_Transmission -[dotted,#blue]-> Beacon_Transmission: <b>__periodic</b> [can_continue_transmission]\n/ send_beacon
}
Stopped --> Started: <b>start</b> \n
Stopped -[dotted,#blue]-> Stopped: <b>__periodic</b> \n/ reload_config
@enduml
